--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "laravel/cashier": "^14.9",
+        "stripe/stripe-php": "^10.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
