--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,38 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+.venv/
+.env
+.coverage
+.pytest_cache/
+.mypy_cache/
+.dmypy.json
+dmypy.json
